# blue-green

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
src/: main.rs
yaml/: blue-green-services.yaml  ingress.yaml  nginx.yaml  web.yaml
yaml/affinity/: affinity-pods.yaml
yaml/probes/: envbin-deployment.yaml  envbin-expose.yaml
