[package]
name = "blue-green"
version = "0.1.0"
authors = ["Matt Turner <matturner@gmail.com>", "Andrei Drynov <adrynov@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "^0.12.0"
chrono = { version = "0.4.41", default-features=false, features=["now"] }
signal-hook = { version = "0.3.18", default-features=false, features=["iterator"] }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
